# ECECooked

./: .gitignore  Background_niveau_1.txt  Background_niveau_2.txt  Background_niveau_3.txt  Background_niveau_4.txt  Background_niveau_5.txt  CMakeLists.txt  README.md  Type_commande0.txt  Type_commande1.txt  Type_commande2.txt  Type_commande3.txt  Type_commande4.txt  Type_commande5.txt  _fonctionsAllegro.c  _fonctionsAllegro.h  _temps.c  _temps.h  commandes.c  config.h  gestionObjets.c  gestionObjets.h  main.c  manette.c  manette_PS.h  menu.c  partie.c  pf_backup.txt  pf_tmp.txt  ressources.c  ressources.h
Docs/: ECECOOCKED_CHARTREGRAPHIQUE.pptx  boutons.pptx
Images/: EgyptAxeBig.pcx  EgyptAxeSmall.pcx  RebellionSquadPolice.pcx  RebellionSquadPolice_small.pcx
marp-projet-info/: presentation.md
